[tool.poetry]
name = "iaia"
version = "0.1.0"
description = ""
authors = ["kyrlian <kyrlian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pyreadline3 = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
